# chest-xray-classifier

./: .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  README.ru.md  docker-compose.yml  dvc.yaml  index.html  mkdocs.yml  objects.inv  params.yaml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
BENCHMARKS/: index.html
LIMITATIONS/: index.html
REPRODUCIBILITY/: index.html
api/: index.html
architecture/: index.html
configs/: config.yaml
configs/data/: default.yaml
configs/experiment/: baseline.yaml
configs/model/: baseline.yaml  default.yaml
configs/trainer/: default.yaml
docs/: BENCHMARKS.md  LIMITATIONS.md  REPRODUCIBILITY.md  api.md  architecture.md  index.md  model_card.md.j2  serving.md  training.md
notebooks/: 01_eda.ipynb  02_demo.ipynb  training.ipynb
reports/: metrics.json  metrics_baseline.json  metrics_summary.json
scripts/: build_sample_data.py  build_widget_samples.py  export_hf_native.py  publish_to_hf.py
search/: search_index.json
serving/: index.html
src/: __init__.py  config.py  dataset.py  labels.py  models.py  preprocessing.py
src/chest_xray_classifier/: __init__.py  __main__.py
src/chest_xray_classifier/data/: __init__.py  datamodule.py  dataset.py  prepare.py
src/chest_xray_classifier/evaluation/: evaluate.py
src/chest_xray_classifier/inference/: predict.py
src/chest_xray_classifier/models/: __init__.py  baseline_dinov2.py  factory.py  lightning_module.py
src/chest_xray_classifier/serving/: errors.py  main.py  routes.py  schemas.py
src/chest_xray_classifier/training/: train.py
tests/: test_data.py  test_inference.py  test_model.py  test_serving.py  test_training.py
training/: index.html
